Notebook for metric collection [WIP]
Replacing the existing notebook with this new notebook, which collects metrics from prometheus using the `prometheus-api-client` python package.

--- a/notebooks/CollectingMetricsfromPrometheus.ipynb
+++ b/notebooks/CollectingMetricsfromPrometheus.ipynb
@@ -11,12 +11,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: prometheus-api-client in /home/hemaveeradhi/.local/lib/python3.7/site-packages (0.0.1)\n",
+      "Requirement already satisfied: retrying in /home/hemaveeradhi/.local/lib/python3.7/site-packages (from prometheus-api-client) (1.3.3)\n",
+      "Requirement already satisfied: dateparser in /home/hemaveeradhi/.local/lib/python3.7/site-packages (from prometheus-api-client) (0.7.1)\n",
+      "Requirement already satisfied: requests in /usr/lib/python3.7/site-packages (from prometheus-api-client) (2.20.0)\n",
+      "Requirement already satisfied: six>=1.7.0 in /home/hemaveeradhi/.local/lib/python3.7/site-packages (from retrying->prometheus-api-client) (1.12.0)\n",
+      "Requirement already satisfied: pytz in /usr/lib/python3.7/site-packages (from dateparser->prometheus-api-client) (2018.5)\n",
+      "Requirement already satisfied: regex in /home/hemaveeradhi/.local/lib/python3.7/site-packages (from dateparser->prometheus-api-client) (2019.3.12)\n",
+      "Requirement already satisfied: python-dateutil in /usr/lib/python3.7/site-packages (from dateparser->prometheus-api-client) (2.7.5)\n",
+      "Requirement already satisfied: tzlocal in /home/hemaveeradhi/.local/lib/python3.7/site-packages (from dateparser->prometheus-api-client) (1.5.1)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/lib/python3.7/site-packages (from requests->prometheus-api-client) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.8,>=2.5 in /usr/lib/python3.7/site-packages (from requests->prometheus-api-client) (2.7)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/lib/python3.7/site-packages (from requests->prometheus-api-client) (1.24.1)\n"
+     ]
+    }
+   ],
    "source": [
-    "import prometheus\n",
     "import os\n",
     "%load_ext dotenv\n",
-    "%dotenv"
+    "%dotenv\n",
+    "!pip3 install prometheus-api-client"
    ]
   },
   {
@@ -40,8 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = os.environ.get(\"THANOS_PROM_URL\")\n",
-    "token = os.environ.get(\"PROM_SESSION_TOKEN\")"
+    "import prometheus_api_client as prom_api"
    ]
   },
   {
@@ -50,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prom = prometheus.Prometheus(url=url, token=token)"
+    "url = os.environ.get(\"FLT_PROM_URL\")\n",
+    "token = os.environ.get(\"FLT_PROM_ACCESS_TOKEN\")"
    ]
   },
   {
@@ -59,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_metrics = prom.all_metrics()"
+    "prom = prom_api.prometheus_connect.PrometheusConnect(url=url, headers={\"Authorization\": \"bearer {}\".format(token)}, disable_ssl=True)"
    ]
   },
   {
@@ -68,24 +87,52 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.7/site-packages/urllib3/connectionpool.py:847: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecureRequestWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_metrics = prom.all_metrics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "['alerts',\n",
+       " 'cluster:capacity_cpu_cores:sum',\n",
+       " 'cluster:capacity_memory_bytes:sum',\n",
+       " 'cluster:cpu_usage_cores:sum',\n",
+       " 'cluster:memory_usage_bytes:sum',\n",
+       " 'cluster:node_instance_type_count:sum',\n",
        " 'cluster_operator_conditions',\n",
        " 'cluster_operator_up',\n",
        " 'cluster_version',\n",
        " 'cluster_version_available_updates',\n",
        " 'cluster_version_payload',\n",
+       " 'code:apiserver_request_count:rate:sum',\n",
        " 'etcd_object_counts',\n",
+       " 'kube_pod_status_ready:etcd:sum',\n",
+       " 'kube_pod_status_ready:image_registry:sum',\n",
        " 'machine_cpu_cores',\n",
        " 'machine_memory_bytes',\n",
+       " 'openshift:cpu_usage_cores:sum',\n",
+       " 'openshift:memory_usage_bytes:sum',\n",
        " 'scrape_duration_seconds',\n",
        " 'scrape_samples_post_metric_relabeling',\n",
        " 'scrape_samples_scraped',\n",
        " 'up']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of metrics present: 13\n"
+      "Number of metrics present: 23\n"
      ]
     }
    ],
@@ -120,25 +167,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.7/site-packages/urllib3/connectionpool.py:847: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecureRequestWarning)\n",
+      "/usr/lib/python3.7/site-packages/urllib3/connectionpool.py:847: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecureRequestWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "metric_data = prom.get_metric_range_data(metric_name='etcd_object_counts', start_time='10m', chunk_size='5m')"
+    "metric_data = prom.get_metric_range_data(metric_name='cluster_version', start_time='10m', chunk_size='5m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "160433"
+       "1799"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +216,7 @@
        "dict_keys(['metric', 'values'])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,28 +237,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'__name__': 'etcd_object_counts',\n",
-       " '_id': '00725312-cfc1-4acc-a968-9a15909fefa0',\n",
-       " 'endpoint': 'https',\n",
-       " 'instance': '10.0.134.228:6443',\n",
-       " 'job': 'apiserver',\n",
+       "{'__name__': 'cluster_version',\n",
+       " '_id': '0073d69c-268c-4ec8-a01f-49afbac32d7b',\n",
+       " 'endpoint': 'metrics',\n",
+       " 'image': 'quay.io/openshift-release-dev/ocp-release@sha256:29a057c89cc5cf9c7853c52b815ba95bd66d1a66cb274d1991ca4951f5920cb2',\n",
+       " 'instance': '10.0.131.57:9099',\n",
+       " 'job': 'cluster-version-operator',\n",
        " 'monitor': 'prometheus',\n",
-       " 'namespace': 'default',\n",
-       " 'pod': 'telemeter-server-3',\n",
+       " 'namespace': 'openshift-cluster-version',\n",
+       " 'pod': 'cluster-version-operator-66f586d9d-7bv6s',\n",
        " 'prometheus': 'openshift-monitoring/k8s',\n",
-       " 'prometheus_replica': 'prometheus-k8s-1',\n",
+       " 'prometheus_replica': 'prometheus-telemeter-1',\n",
        " 'replica': '$(HOSTNAME)',\n",
-       " 'resource': 'apiservers.config.openshift.io',\n",
-       " 'service': 'kubernetes'}"
+       " 'service': 'cluster-version-operator',\n",
+       " 'type': 'cluster',\n",
+       " 'version': '4.0.0-0.9'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of labels identified: 13\n"
+      "Number of labels identified: 15\n"
      ]
     }
    ],
@@ -230,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +299,7 @@
        "['__name__',\n",
        " '_id',\n",
        " 'endpoint',\n",
+       " 'image',\n",
        " 'instance',\n",
        " 'job',\n",
        " 'monitor',\n",
@@ -247,11 +308,12 @@
        " 'prometheus',\n",
        " 'prometheus_replica',\n",
        " 'replica',\n",
-       " 'resource',\n",
-       " 'service']"
+       " 'service',\n",
+       " 'type',\n",
+       " 'version']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1552676388.975, '0']]"
+       "[[1555613915.201, '1555586845']]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,20 +343,6 @@
     "metric_values = metric_data[0].get('values')\n",
     "metric_values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -313,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
