--- a/notebooks/CollectingMetricsfromPrometheus.ipynb
+++ b/notebooks/CollectingMetricsfromPrometheus.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "## Setting up the connection to scrape metrics from the prometheus instance\n",
-    "We need to obtain a session token in order to scrape the required Thanos instance on OpenShift. You can obtain this token value (after having logged in to OpenShift) and setting it as an env variable."
+    "We need to obtain a session token in order to scrape the required Thanos instance on OpenShift. You can obtain this token value (after having logged in to OpenShift) and setting it as an env variable. You need to set the URL as the URL of the prometheus instance you wish to collect your metrics from and you can read this from an another env variable."
    ]
   },
   {
